// Copyright 2023-2025 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package buf.validate.conformance.cases;

import "buf/validate/validate.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message AnyNone {
  google.protobuf.Any val = 1;
}
message AnyRequired {
  google.protobuf.Any val = 1 [(buf.validate.field).required = true];
}
message AnyIn {
  google.protobuf.Any val = 1 [(buf.validate.field).any = {
    in: ["type.googleapis.com/google.protobuf.Duration"]
  }];
}
message AnyNotIn {
  google.protobuf.Any val = 1 [(buf.validate.field).any = {
    not_in: ["type.googleapis.com/google.protobuf.Timestamp"]
  }];
}

// The below messages should throw compilation errors due to incorrect types.
message AnyWrongTypeScalar {
  string val = 1 [(buf.validate.field).any = {
    not_in: ["type.googleapis.com/google.protobuf.Timestamp"]
  }];
}
message AnyWrongTypeMessage {
  message WrongType {
    int32 val = 1;
  }
  WrongType val = 1 [(buf.validate.field).any = {
    not_in: ["type.googleapis.com/google.protobuf.Timestamp"]
  }];
}
message AnyWrongTypeWrapper {
  google.protobuf.Int32Value val = 1 [(buf.validate.field).any = {
    not_in: ["type.googleapis.com/google.protobuf.Timestamp"]
  }];
}

message AnyWrongTypeWKT {
  google.protobuf.Timestamp val = 1 [(buf.validate.field).any = {
    not_in: ["type.googleapis.com/google.protobuf.Timestamp"]
  }];
}
